# crm

./: CLAUDE.md  docker-compose.yml  package-lock.json
crm-backend/: Dockerfile  pyproject.toml  requirements.txt
crm-backend/apps/authentication/: serializers.py  urls.py  views.py
crm-backend/apps/customers/: admin.py  models.py  serializers.py  urls.py  views.py
crm-backend/apps/customers/migrations/: 0001_initial.py  0002_customeraddress.py  0003_customer_iban_customer_nif.py  0004_customer_decisor_customer_segment.py  0005_unaccent_extension.py  0006_customer_search_vector_customeraddress_search_vector_and_more.py
crm-backend/apps/documents/: admin.py  file_compression.py  image_compression.py  models.py  serializers.py  urls.py  validators.py  views.py
crm-backend/apps/documents/migrations/: 0001_initial.py
crm-backend/apps/notifications/: admin.py  models.py  schemas.py  serializers.py  urls.py  views.py
crm-backend/apps/notifications/management/commands/: generate_service_ending_notifications.py
crm-backend/apps/notifications/migrations/: 0001_initial.py
crm-backend/apps/notifications/use_cases/: generate_service_ending.py
crm-backend/apps/services/: admin.py  models.py  serializers.py  urls.py  views.py
crm-backend/apps/services/migrations/: 0001_initial.py  0002_alter_customerservice_data_fim_and_more.py  0003_customerservice_morada.py
crm-backend/config/: urls.py
crm-backend/config/settings/: base.py  development.py  production.py
crm-frontend/: .env.example  CLAUDE.md  README-CRM.md  index.html  package-lock.json  package.json  (+1 more)
(+75 files in other folders)
